Add the nativeVirtualKey value to fake keyrelease events generated to unpress modifiers

They are needed for the vnc backend to properly handle the keys

BUG: 497111